# edge-prediction-in-dynamic-graphs

./: .gitignore  LICENSE  README.md  pyproject.toml  status.txt  status_hist.txt
config/: config.yaml
config/data/: wikipedia.yaml
config/dataset/: Enron.yaml  UNvote.yaml  mooc.yaml  reddit.yaml  tgb-test.yaml  tgbl-wiki.yaml  uci.yaml  wikipedia.yaml
config/labeling/: de.yaml  drnl.yaml  zero.yaml  zot.yaml
config/model/: se_tgn.yaml  tgn.yaml  tgn_de_lt.yaml  tgn_drnl_lt.yaml  tgn_labeling.yaml  tgn_labeling_de.yaml  tgn_labeling_drnl.yaml  tgn_labeling_zot.yaml  tgn_lt.yaml  tgn_zot_lt.yaml
config/negative_sampling/: historical.yaml  inductive.yaml  random.yaml
data/raw/: wikipedia.csv
datasets/: .gitkeep
src/: TEA.py  TET.py  calculate_results.py  calculate_results2.py  calculate_results3-results copy.py  calculate_results4-loss.py  czy-koniec.py  czy-koniec2.py  plots.py  plots2.py  plots4.py  profiling_script.py  profiling_script2.py  run.py  run2.py  run_all.py  run_all_hist.py  run_hist.py  test.py  test_mps.py
src/data/: labeling.py  loader.py  preprocessing.py
src/labeling/: base.py  de.py  de_nl.py  drnl.py  drnl_nl.py  simple_labeling.py  zero_nl.py  zot.py  zot_nl.py  zot_nl1.py
src/models/: TGN.py  TGN_de_lt.py  TGN_drnl.py  TGN_lt.py  TGN_zot.py  TGN_zot_lt.py  base.py  se_tgn.py  tgn_labeling.py  tgn_labeling_drnl.py  tgn_labeling_zot.py  tgn_vanilla.py
src/training/: evaluator.py  trainer.py
src/training/callbacks/: base.py  early_stopping.py  tensorboard.py
src/utils/: config.py  negative_sampling.py  random.py
