[project]
name = "edge-prediction-in-dynamic-graphs"
version = "0.1.0"
description = "Edge Prediction in Dynamic Graphs: A Research-Oriented Analysis of Temporal Graph Learning Methods"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "py-tgb>=2.2.0",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "setuptools>=82.0.0",
    "tabulate>=0.10.0",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
